--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Manager</title>
-    <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles.css">
+    <title>SM-Task Manager</title>
 </head>
 <body>
-    <h1>Task Manager</h1>
-    <form id="add-task-form">
-        <input type="text" id="task-input" placeholder="Add task">
-        <input type="datetime-local" id="deadline-input">
-        <button id="add-task-btn">Add Task</button>
-    </form>
-    <ul id="task-list"></ul>
-    <div id="filter-container">
-        <label for="filter-completed">Show completed tasks</label>
-        <input type="checkbox" id="filter-completed">
-        <label for="filter-active">Show active tasks</label>
-        <input type="checkbox" id="filter-active">
+    <div class="container">
+        <h1 class="title">SM - Task Manager</h1>
+        <div class="task-form">
+            <input type="text" id="task-input" placeholder="Enter a new task..." class="task-input">
+            <button id="add-task-btn" class="add-task-btn">Add Task</button>
+        </div>
+        <ul id="task-list" class="task-list"></ul>
+      <center><button id="clear-all-btn" class="clear-all-btn">Clear All</button>
+        <p><b>Made with ❤️ by Tarak Aggarwal</b></p>
+      </center>
+      
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
