--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
-    <title>SM-Task Manager</title>
+    <title>Task Manager</title>
 </head>
 <body>
     <div class="container">
