--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">SM - Task Manager</h1>
+        <h1 class="title">Task Manager</h1>
         <div class="task-form">
             <input type="text" id="task-input" placeholder="Enter a new task..." class="task-input">
             <button id="add-task-btn" class="add-task-btn">Add Task</button>
